--- a/.lynx.cfg
+++ b/.lynx.cfg
@@ -1,3 +1,5 @@
+# Add this to your .bashrc or .zshrc or whatever rc files:
+#  alias lynx='lynx -cfg ~/.lynx.cfg'
 INCLUDE:/etc/lynx/lynx.cfg
 USE_SELECT_POPUPS:TRUE
 SHOW_CURSOR:TRUE
