--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,10 +44,10 @@ bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
 set -g status-bg black
 set -g status-fg white
-set -g window-status-current-bg white
+set -g window-status-current-bg blue
 set -g window-status-current-fg black
 set -g window-status-current-attr bold
-set -g status-interval 30
-set -g status-left-length 30
-set -g status-left '#[fg=blue,bold][#S] '
-set -g status-right '#[fg=blue,bold][%H:%M]#[default]'
+set -g status-interval 10
+set -g status-left-length 15
+set -g status-left '#[fg=black,bold]#[bg=green]#S#[default] '
+set -g status-right '#[fg=black,bold]#[bg=green]@#H %m-%d %H:%M#[default]'
