--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,4 @@
-set -g prefix C-a
-set -g prefix2 C-b
-bind C-a send-prefix
+set -g prefix C-b
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -12,6 +10,8 @@ set -sg escape-time 0
 set -g history-limit 10000
 
 bind y copy-mode
+bind-key -T copy-mode Escape send-keys -X cancel
+bind-key -T copy-mode-vi Escape send-keys -X cancel
 unbind [
 
 bind -r ( switch-client -p
@@ -42,12 +42,12 @@ bind -n M-Down resize-pane -D
 
 bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
-set -g status-bg black
+set -g status-bg brightblack
 set -g status-fg white
 set -g window-status-current-bg blue
-set -g window-status-current-fg black
+set -g window-status-current-fg white
 set -g window-status-current-attr bold
 set -g status-interval 10
 set -g status-left-length 15
-set -g status-left '#[fg=black,bold]#[bg=green]#S#[default] '
-set -g status-right '#[fg=black,bold]#[bg=green]@#H %m-%d %H:%M#[default]'
+set -g status-left '#[fg=black]#[bg=green]#S#[default] '
+set -g status-right '#[fg=black]#[bg=green]@#H %m-%d %H:%M#[default]'
